<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="app.modules.appmcdouglas.ui.home.HomeFragment"
        android:label="@string/item_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_shoppingcart"
        android:name="app.modules.appmcdouglas.ui.shoppingcart.ShoppingCartFragment"
        android:label="@string/item_shoppingcart"
        tools:layout="@layout/fragment_shoppingcart" />

    <fragment
        android:id="@+id/nav_payment"
        android:name="app.modules.appmcdouglas.ui.payment.PaymentFragment"
        android:label="@string/item_payment"
        tools:layout="@layout/fragment_payment" />

    <fragment
        android:id="@+id/nav_user"
        android:name="app.modules.appmcdouglas.usermanagement.UserFragment"
        android:label="@string/item_user"
        tools:layout="@layout/fragment_user" />
</navigation>