<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".usermanagement.UserFragment">

    <TextView
        android:id="@+id/txtTitle"
        android:gravity="center"
        android:text="@string/user_title"
        android:textSize="26dp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txtTitle"
        android:text="@string/user_info"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_below="@+id/txtInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18dp"
        android:hint="@string/user_email"
        android:inputType="text"
        android:text=""
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edtName"
        android:layout_below="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18dp"
        android:hint="@string/user_name"
        android:inputType="text"
        android:text=""
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edtLastname"
        android:layout_below="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18dp"
        android:hint="@string/user_lastname"
        android:inputType="text"
        android:text=""
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/txtInfo2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edtLastname"
        android:text="@string/user_info2"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View style="@style/Divider"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txtInfo2"
        />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_below="@+id/txtInfo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18dp"
        android:hint="@string/user_paswword"
        android:inputType="text"
        android:layout_marginTop="15dp"
        android:text=""
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edtChangePassword"
        android:layout_below="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18dp"
        android:hint="@string/user_change_password"
        android:inputType="text"
        android:text=""
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edtConfirmpassword"
        android:layout_below="@+id/edtChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/user_confirm_password"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="@color/black" />

    <View style="@style/Divider"
        android:layout_marginTop="10dp"
        android:layout_below="@id/edtConfirmpassword"
        />


    <TextView
        android:id="@+id/txtDangerUser"
        android:layout_below="@+id/edtConfirmpassword"
        android:textSize="18dp"
        android:textColor="@color/red"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSuccessShopping"
        android:layout_below="@+id/txtDangerUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/user_save" />

</RelativeLayout>