<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".ui.payment.BillPaymentFragment">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:textSize="30dp"
        android:text="@string/bill_title" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_below="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#515151"
        android:textSize="22dp"
        android:text="@string/bill_date" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_below="@+id/txtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#515151"
        android:textSize="22dp"
        android:text="@string/bill_total" />

    <TextView
        android:id="@+id/txtRest"
        android:layout_below="@+id/txtTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#515151"
        android:textSize="22dp"
        android:text="@string/bill_rest" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_below="@+id/txtRest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#515151"
        android:textSize="22dp"
        android:text="@string/bill_address" />



</RelativeLayout>