<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_payment_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".ui.payment.PaymentDetailsFragment">

    <TextView
        android:id="@+id/txtTitle"
        android:gravity="center"
        android:text="@string/payment_detail_title"
        android:textSize="26dp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txtTitle"
        android:text="@string/payment_detail_total"
        android:textSize="22dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txtTotal"
        android:text="@string/payment_detail_info"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/edtNumCard"
        android:layout_below="@+id/txtInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/payment_num_card"
        android:inputType="number"
        android:text=""
        android:textSize="18dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txtDangerNumCard"
        android:layout_below="@+id/edtNumCard"
        android:text=""
        android:textSize="18dp"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtDateCard"
        android:layout_below="@+id/txtDangerNumCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/payment_date_card"
        android:inputType="date"
        android:text=""
        android:textSize="18dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txtDangerDateCard"
        android:layout_below="@+id/edtDateCard"
        android:text=""
        android:textSize="18dp"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtNameCard"
        android:layout_below="@+id/txtDangerDateCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18dp"
        android:hint="@string/payment_name_card"
        android:inputType="text"
        android:text=""
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txtDangerNameCard"
        android:layout_below="@+id/edtNameCard"
        android:text=""
        android:textSize="18dp"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtCodeCard"
        android:layout_below="@+id/txtDangerNameCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18dp"
        android:hint="@string/payment_code_card"
        android:inputType="number"
        android:text=""
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txtDangerCodeCard"
        android:layout_below="@+id/edtCodeCard"
        android:text=""
        android:textSize="18dp"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_below="@+id/txtDangerCodeCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18dp"
        android:hint="@string/payment_address_card"
        android:inputType="text"
        android:text=""
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txtDangerAddress"
        android:layout_below="@+id/edtAddress"
        android:text=""
        android:textSize="18dp"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSuccessShopping"
        android:layout_below="@+id/txtDangerAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/payment_detail_button" />

</RelativeLayout>